# xcresult-ai-assistant

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/: passing_tests.txt  sample_junit.xml  sample_xctest_log.txt
src/xcresult_ai_assistant/: __init__.py  cli.py
src/xcresult_ai_assistant/ai/: __init__.py  suggestion_engine.py
src/xcresult_ai_assistant/analyzers/: __init__.py  failure_analyzer.py  flaky_detector.py  pattern_analyzer.py
src/xcresult_ai_assistant/models/: __init__.py  analysis.py  failure.py  report.py  test_result.py
src/xcresult_ai_assistant/parsers/: __init__.py  auto_parser.py  base.py  junit_parser.py  log_parser.py  xcresult_parser.py
src/xcresult_ai_assistant/reports/: __init__.py  console_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py  report_factory.py
src/xcresult_ai_assistant/utils/: __init__.py  file_utils.py
tests/: __init__.py  test_analyzers.py  test_cli.py  test_models.py  test_parsers.py  test_reports.py
